[gd_scene load_steps=9 format=3 uid="uid://cbpesb58jvk0a"]

[ext_resource type="Script" path="res://scripts/tickets/ticket_box.gd" id="1"]
[ext_resource type="Theme" uid="uid://bir7klqliay2t" path="res://themes/main_theme.tres" id="2"]
[ext_resource type="FontFile" uid="uid://dvawglhcp46vu" path="res://fonts/titillium-web/TitilliumWeb-SemiBold.ttf" id="3"]

[sub_resource type="FontFile" id="1"]
fallbacks = Array[Font]([ExtResource("3")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="Animation" id="4"]
resource_name = "closed"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel/HBoxContainer/TicketButton/Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.584314, 0.584314, 0.584314, 1), Color(0.584314, 0.584314, 0.584314, 1)]
}

[sub_resource type="Animation" id="3"]
resource_name = "new_messages"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel/HBoxContainer/TicketButton/Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0.631373, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="2"]
resource_name = "slowflash"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel/HBoxContainer/TicketButton/Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_00lax"]
_data = {
"closed": SubResource("4"),
"new_messages": SubResource("3"),
"slowflash": SubResource("2")
}

[node name="TicketInstance" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -139.5
offset_top = -17.5
offset_right = 139.5
offset_bottom = 17.5
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_right = 3.0

[node name="TicketButton" type="Button" parent="Panel/HBoxContainer"]
custom_minimum_size = Vector2(220, 30)
layout_mode = 2
flat = true

[node name="Label" type="Label" parent="Panel/HBoxContainer/TicketButton"]
modulate = Color(0.584314, 0.584314, 0.584314, 1)
layout_mode = 0
offset_left = -1.0
offset_right = 222.0
offset_bottom = 36.0
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="CloseTicket" type="Button" parent="Panel/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("1")
text = "Close"
flat = true
icon_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_00lax")
}

[connection signal="pressed" from="Panel/HBoxContainer/TicketButton" to="." method="_on_TicketButton_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/CloseTicket" to="." method="_on_CloseTicket_pressed"]
